<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreditCards.BankDetails">

    <TextView
        android:textColor="#09775B"
        android:textStyle="italic"
        android:textSize="30sp"
        android:id="@+id/tv_titleBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/bank_details"

        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/tv_bankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/bank_name" />

    <Spinner
        android:id="@+id/spn_bankName"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_IBAN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/iban" />


    <EditText
        android:id="@+id/et_IBAN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:hint="@string/insert_the_iban">

    </EditText>


    <TextView
        android:id="@+id/tv_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/limit" />


    <EditText
        android:id="@+id/et_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:hint="@string/amount_of_money_lei">

    </EditText>

    <ListView
        android:id="@+id/lv_banks"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_okBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/btn_cancelBank"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

</LinearLayout>



