<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="154dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/textview1" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/textview2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="169dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCashAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/textview3" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/textview4" />
    </LinearLayout>

</LinearLayout>