<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreditCards.CreditCards_2"
    android:id="@+id/layout"
    >

    <TextView

        android:textStyle="italic"
        android:textSize="30sp"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/credit_cards"
        android:textAlignment="center"

        />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:text="@string/is_the_information_correct"

        android:textStyle="italic"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/tv_Actual_Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="8dp"
        android:text="@string/actual_amount" />


    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/tv_amountCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:textColor="#215704" />

    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/type_of_sum" />


    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/tv_typeSumCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:textColor="#215704" />

    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:text="@string/category" />


    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/tv_categoryCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:textColor="#215704" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/tv_insertDate"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_transaction"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        />

    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/tv_dateCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:textColor="#215704" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button3"
            android:backgroundTint="#FF5252"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="returnToMainActivity"
            android:text="@string/no3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.733"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:backgroundTint="#69F0AE"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/yes"
            android:onClick="CallListActivity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>